--- a/components/_btn.scss
+++ b/components/_btn.scss
@@ -8,7 +8,7 @@
   font-weight: 900;
   line-height: 24px;
   letter-spacing: 0em;
-  text-align: left;
+  text-align: center;
   padding: 20px 40px;
   display: block;
   margin-bottom: 100px;
