--- a/pages/_index.scss
+++ b/pages/_index.scss
@@ -234,22 +234,25 @@
 }
 
 @media (max-width: 375px) {
-  .content {
-    display: none;
+  .banner {
+    .content {
+      display: none;
+    }
+    .content-mobile {
+      display: block;
+      color: #fff;
+      //styleName: TC / Heading01 / Bold;
+      margin-bottom: 40px;
+      //styleName: TC / Heading03 / Bold;
+      font-family: Noto Sans TC;
+      font-size: 32px;
+      font-weight: 900;
+      line-height: 38px;
+      letter-spacing: 0em;
+      text-align: left;
+    }
   }
-  .content-mobile {
-    display: block;
-    color: #fff;
-    //styleName: TC / Heading01 / Bold;
-    margin-bottom: 40px;
-    //styleName: TC / Heading03 / Bold;
-    font-family: Noto Sans TC;
-    font-size: 32px;
-    font-weight: 900;
-    line-height: 38px;
-    letter-spacing: 0em;
-    text-align: left;
-  }
+
   .arrow {
     flex-direction: row;
     margin-bottom: 120px;
@@ -315,6 +318,12 @@
   .app {
     padding: 80px 0;
     border-radius: 20px;
+    .search {
+      padding: 20px 60px;
+    }
+    .search-icon {
+      left: 28px;
+    }
     .app-title {
       //styleName: TC / Heading03 / Bold;
       font-family: Noto Sans TC;
@@ -354,6 +363,17 @@
   }
 
   .footer {
+    .footer-box {
+      .footer-links {
+        //styleName: TC / Heading01 / Bold;
+        font-family: Noto Sans TC;
+        font-size: 48px;
+        font-weight: 900;
+        line-height: 58px;
+        letter-spacing: 0em;
+        text-align: left;
+      }
+    }
     .footer-nav-pc {
       display: none !important;
     }
@@ -362,6 +382,13 @@
       margin-bottom: 32px;
       li {
         margin-right: 20px;
+        //styleName: TC / Body / Bold;
+        font-family: Noto Sans TC;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
       }
     }
   }
